--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @viewport {
   width: device-width ;
