--- a/src/app/components/navigation/header/header.component.html
+++ b/src/app/components/navigation/header/header.component.html
@@ -6,7 +6,9 @@
       <i class="fas fa-bars"></i>
     </button>
   </div>
-  <div><a><img src="../../../../assets/img/Coris_logo.png" class="logo"></a></div>
+  <div fxLayout="row" fxFlex.xs fxLayoutAlign="end">
+    <a><img src="../../../../assets/img/Coris_logo.png" class="logo"></a>
+  </div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="nav-items">
       <li><a routerLink="/validators">Validators</a></li>
