scoreboard placeholder added.

--- a/src/app/components/navigation/header/header.component.html
+++ b/src/app/components/navigation/header/header.component.html
@@ -7,7 +7,7 @@
     </button>
   </div>
   <div fxLayout="row" fxFlex.xs fxLayoutAlign="end">
-    <a><img src="../../../../assets/img/Coris_logo.png" class="logo"></a>
+    <a href="#"><img src="../../../../assets/img/Coris_logo.png" class="logo"></a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="nav-items">
