--- a/src/app/components/validators/validators.component.css
+++ b/src/app/components/validators/validators.component.css
@@ -28,19 +28,19 @@ td {
 }
 
 thead th:nth-child(1) {
-  width: 10%;
+  width: 3%;
 }
 
 thead th:nth-child(2) {
-  width: 20%;
+  width: 15%;
 }
 
 thead th:nth-child(3) {
-  width: 20%;
+  width: 10%;
 }
 
 thead th:nth-child(4) {
-  width: 20%;
+  width: 10%;
 }
 thead th:nth-child(5) {
   width: 10%;
@@ -51,6 +51,18 @@ thead th:nth-child(6) {
 }
 
 thead th:nth-child(7) {
+  width: 10%;
+}
+
+thead th:nth-child(8) {
+  width: 10%;
+}
+
+thead th:nth-child(9) {
+  width: 10%;
+}
+
+thead th:nth-child(10) {
   width: 10%;
 }
 
@@ -152,4 +164,15 @@ tbody {
 
 .jailedNot {
   color: green;/*#00796b;*/
+}
+
+.weightPerct {
+  color: rgb(101, 170, 223);
+}
+
+.test {
+  background-color: #ff9800;
+  border: 1px;
+  width: 40px;
+  border-radius: 5px;
 }
