--- a/src/app/components/validators/validators.component.css
+++ b/src/app/components/validators/validators.component.css
@@ -176,3 +176,26 @@ tbody {
   width: 40px;
   border-radius: 5px;
 }
+
+/* Material table */
+
+.mat-row:nth-child(even){
+  background-color:#0D151F;
+}
+
+.mat-row:nth-child(odd){
+  background-color:#111923;
+}
+
+.mat-header-cell, .mat-cell {
+  font-size: 20px;
+  font-family: 'Lato', 'Arial', sans-serif;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+  color: #111923;
+}
+
+
+.mat-cell {
+  color: #F7F7F7;
+}
