--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -5,7 +5,7 @@
       <td mat-cell *matCellDef="let validator"> {{0}} </td>
     </ng-container> -->
     <ng-container  matColumnDef="moniker">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-sort-header="name" mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let validator"> 
         <figure class="validator-avatar is-128x128" *ngIf="validator.keybase">
           <img  
