--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,11 @@
     <main>
       <body>
         <section class="landing">
-          <div class="row header-row">
+          <div class="row header-row" @dropDownAnimation>
             <h1 class="title header-title">
               Coris Explorer 
             </h1>
-            <h2 class="subtitle header-subtitle">{{(appState | async).blocks[0]?.header.chain_id}}</h2>
+            <h2 class="subtitle header-subtitle" @fadeInAnimation>{{(appState | async).blocks[0]?.header.chain_id}}</h2>
           </div>
           <div class="row proposer-row">
             <div style="cursor: pointer;" routerLink="/validator/{{(appState | async).round.proposer?.address}}">
@@ -31,7 +31,7 @@
               </ng-template>
             </div>
           </div>
-          <div class="row chain-queries-row">
+          <div class="row chain-queries-row" @fadeInAnimation>
             <div class="col span-1-of-4">
               <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
                 <article class="box">
@@ -68,7 +68,7 @@
                   <article class="box">
                     <p class="subtitle chain-queries-subtitle box-key"><i class="ion-soup-can"></i>&nbsp;Add staking pool</p>
                     <h3 class="title chain-queries-title box-value">{{(appState | async).validators?.length}}</h3>
-                    <!-- <p class="subtitle chain-queries-subtitle">Validators</p> -->
+                    <!-- <p class="subtsitle chain-queries-subtitle">Validators</p> -->
                   </article>
                 </div>
             </div>
